--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
             <img src="images/1.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1><span class="pink-color">DREAM</span>BIG</h1>
+            <h2>I want to become web developer.</h2>
+            <p>I already learned the basic html,css,github, etc. I think I will learn many thing in future. I can build
+                a website. I will do better in future.I need more practice to become a web developer.</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+
+
+        </div>
+    </section>
+
 </body>
 
 </html>
