--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexiable-container">
         <div class="half-width">
             <h1>WELCOME TO</h1>
             <h1><span class="orange-color">ASHIKUR RAHMAN</span> PORTFOLIO</h1>
@@ -29,8 +29,8 @@
             <img src="images/1.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
-        <div class="half-width">
+    <section class="dream-big flexiable-container">
+        <div class="half-width ">
             <img src="images/2.png" alt="">
         </div>
         <div class="half-width">
@@ -43,6 +43,27 @@
 
         </div>
     </section>
+    <section class="experince-area">
+        <h1>EXPERIENCES</h1>
+        <div class="flexiable-container">
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2022-Present |Beginner level Developer</h3>
+                <p>Now I am learning Html,css,Java script. I am learning about things needed to make a website
+                    function,efficient.I want to learn more. </p>
+            </div>
+            <div id="full-stack-experience" class="experience-item">
+                <h2>BABY WEB DEVELOPER</h2>
+                <h3 class="orange-color">2021-2022 | Programming hero learner</h3>
+                <p>They didn't offer me a job. But I made their website and showed to them. they liked it and uploaded
+                    the
+                    content.It was fun working at programming hero</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>peater parker 2021</p>
+    </footer>
 
 </body>
 
